--- a/PlacementExam.html
+++ b/PlacementExam.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html> <title>Asa Grumdahl - Carleton CS Placement Exam</title>
+<html> <title>Carleton CS Placement Exam</title>
     <body>
         <input type="file" id="textInput" accept=".txt" onchange="readText(this)"/>
     </body>
